fixed backend colors and made button more visible

--- a/Frontend/f1-frontend/src/app/app.component.css
+++ b/Frontend/f1-frontend/src/app/app.component.css
@@ -13,4 +13,6 @@
 }
 .compare-button{
     margin-bottom: 2%;
+    background-color: lightgray;
+    
 }
